fix some spacing issues

--- a/web/accordion.css
+++ b/web/accordion.css
@@ -9,21 +9,19 @@
   width: 100px;
   /*padding: 0.5em;*/
 }
-.tab .label {
+.accordion .tab .label {
   -ms-transform: rotate(-90deg);
   -webkit-transform: rotate(-90deg);
   transform: rotate(-90deg);
-  /*transform-origin:100% 100%;*/
-  /*-webkit-transform-origin:100% 100%;*/
+  transform-origin:top left;
   -webkit-transform-origin:top left;
   /*clear:none;*/
   width: 300px;
-  margin-top: 40px; /*50% of width (which is really the height now)*/
+  margin-top: 0; /*50% of width (which is really the height now)*/
   border-bottom: 1px dashed black;
   font-size: 16pt;
   font-weight: bold;
 }
-
 .tab .buttons {
   margin-left: 1em;
 }
@@ -35,15 +33,15 @@
   height: 300px;
   overflow: hidden;
   /*background: #7d8d96;*/
-  border: 2px solid gray;
+  border: 1px solid gray;
 }
  
 .accordion li {
   float: left;
-  border-left:
+  /*border-left;*/
   display: block;
   height: 270px;
-  width: 75px;
+  width: 100px;
   padding: 15px 0;
   overflow: hidden;
   color: #fff;
@@ -53,12 +51,12 @@
   border-left: 1px solid #fff;
 }
  
-.accordion li img {
+/*.accordion li img {
   border: none;
   border-right: 1px solid #fff;
   float: left;
   margin: -15px 15px 0 0;
-}
+}*/
  
 /*.accordion li.active {
   width: 100%;
